--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@
                                 <h3 class="text-lg sm:text-xl font-bold text-white">J.M.J English Medium School</h3>
                             </div>
                             <p class="text-gray-400 text-xs sm:text-sm mb-2">High School Qualification (10th Grade)</p>
-                            <p class="text-gray-500 text-xs">2016 - 2017</p>
+                            <p class="text-gray-500 text-xs">2016 - 2021</p>
                             <div class="mt-3 sm:mt-4 flex flex-wrap gap-1 sm:gap-2">
-                                <span class="px-2 py-1 bg-gray-800 text-red-400 text-xs rounded">GPA: 9.2/10</span>
+                                <span class="px-2 py-1 bg-gray-800 text-red-400 text-xs rounded">GPA: 8.9/10</span>
                                 <span class="px-2 py-1 bg-gray-800 text-blue-400 text-xs rounded">State Board</span>
                             </div>
                         </div>
@@ -485,7 +485,7 @@
                                 <h3 class="text-lg sm:text-xl font-bold text-white">Thandra Paparaya Polytechnic College</h3>
                             </div>
                             <p class="text-gray-400 text-xs sm:text-sm mb-2">Diploma in Electronic and Communication Engineering</p>
-                            <p class="text-gray-500 text-xs">2017 - 2020 | GPA: 8.5/10</p>
+                            <p class="text-gray-500 text-xs">2021 - 2024 | GPA: 8.5/10</p>
                             <div class="mt-3 sm:mt-4 flex flex-wrap gap-1 sm:gap-2">
                                 <span class="px-2 py-1 bg-gray-800 text-blue-400 text-xs rounded">Microprocessors</span>
                                 <span class="px-2 py-1 bg-gray-800 text-purple-400 text-xs rounded">Digital Electronics</span>
@@ -509,7 +509,7 @@
                                 <h3 class="text-lg sm:text-xl font-bold text-white">Visakha Institute of Engineering & Technology</h3>
                             </div>
                             <p class="text-gray-400 text-xs sm:text-sm mb-2">B.Tech in Cybersecurity Engineering (2nd Year)</p>
-                            <p class="text-gray-500 text-xs">2022 - Present</p>
+                            <p class="text-gray-500 text-xs">2024 - Present</p>
                             <div class="mt-3 sm:mt-4 flex flex-wrap gap-1 sm:gap-2">
                                 <span class="px-2 py-1 bg-gray-800 text-purple-400 text-xs rounded">Network Security</span>
                                 <span class="px-2 py-1 bg-gray-800 text-red-400 text-xs rounded">Ethical Hacking</span>
@@ -556,7 +556,7 @@
                             <div class="text-red-400 text-2xl mt-1">✉️</div>
                             <div>
                                 <h4 class="text-gray-400 text-sm">Email</h4>
-                                <a href="mailto:bhanu.prasad@example.com" class="text-white hover:text-red-400 transition break-all">bhanu.prasad@example.com</a>
+                                <a href="mailto:bhanu.prasad@example.com" class="text-white hover:text-red-400 transition break-all">ilovemyselfonly320@example.com</a>
                             </div>
                         </div>
                         
